[gd_scene load_steps=4 format=3 uid="uid://17jyotb8a5fb"]

[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="1_vhq0q"]
[ext_resource type="Script" uid="uid://bkbj7yb1enmad" path="res://scripts/menus/pause_menu/codex_menu/codex_entry_panel.gd" id="2_8dqek"]
[ext_resource type="Theme" uid="uid://d2qqyhri84552" path="res://themes/nested_ui/larger_text_panel_theme.tres" id="3_w6vcq"]

[node name="CodexEntryPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 397.0
offset_top = 133.0
offset_right = -40.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vhq0q")
script = ExtResource("2_8dqek")
metadata/_edit_horizontal_guides_ = [584.0]

[node name="EntryTitleLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme = ExtResource("3_w6vcq")
theme_override_font_sizes/bold_italics_font_size = 28
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/mono_font_size = 28
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "[center]Codex Entry Title Should Go Here[/center]"
fit_content = true

[node name="EntryDescriptionLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 42.0
offset_right = -30.0
offset_bottom = -201.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("3_w6vcq")
bbcode_enabled = true
text = "This is some text for the Codex. This should be able to hold a lot of text so that the codex entries can be long and descriptive. It should not be so long that nobody wants to read it or someone gets a headache from reading it. Lore, game mechanics, and other things should definitely go in the Codex system. The entirety of the Codex text fits inside half of the Codex Entry panel, and the other half is dedicated to a Codex Entry image, if any is set. Otherwise, the Codex Entry panel has a blank lower half. This should be good enough, hopefully no more is necessary to facilitate this system."

[node name="EntryImageControl" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 79.5
offset_right = -9.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="EntryImage" type="Sprite2D" parent="EntryImageControl"]
position = Vector2(413, 95)

[connection signal="focus_entered" from="EntryDescriptionLabel" to="." method="_on_entry_description_label_focus_entered"]
